# Micro-Vector-Editor

./: .gitignore  CMakeLists.txt  README.md
include/commands/: AddCommand.h  ChangeStrokewidthcommand.h  ChangecolorCommand.h  Command.h  CommandStack.h  CreateCommand.h  DeleteCommand.h  ModifyCommand.h  MoveCommand.h  ResizeCommand.h
include/core/: Circle.h  Diagram.h  FreehandSketch.h  GraphicsObject.h  Hexagon.h  Line.h  Rectangle.h  RoundedRectangle.h  Text.h
include/parser/: SVGParser.h
include/ui/: Canvas.h  EditorTypes.h  MainWindow.h  MenuBar.h  Toolbar.h
src/: main.cpp
src/commands/: AddCommand.cpp  ChangeStrokewidthcommand.cpp  ChangecolorCommand.cpp  Command.cpp  CommandStack.cpp  CreateCommand.cpp  DeleteCommand.cpp  ModifyCommand.cpp  MoveCommand.cpp  ResizeCommand.cpp
src/core/: Circle.cpp  Diagram.cpp  FreehandSketch.cpp  GraphicsObject.cpp  Hexagon.cpp  Line.cpp  Rectangle.cpp  RoundedRectangle.cpp  Text.cpp
src/parser/: SVGParser.cpp  SVGParser_Core.cpp  SVGParser_Parse.cpp
src/ui/: Canvas.cpp  MainWindow.cpp  MenuBar.cpp  Toolbar.cpp  canvas_Core.cpp  canvas_Key.cpp  canvas_Menu.cpp  canvas_Mouse.cpp
test/: combined_tests.cpp  purpose_of_combined.txt
